# promptius-gui

./: .gitignore  README.md  RELEASING.md  SCHEMA_MISMATCHES.md
.github/workflows/: publish.yml  validate-commits.yml
docs/: api.rst  conf.py  development.rst  index.rst  installation.rst  introduction.rst  quickstart.rst
js/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.base.json  tsconfig.json  vite.config.ts
js/demos/: index.tsx
js/src/: index.css
python/: Makefile  README.md  main.py  pyproject.toml  server.py
python/dgui_schema/: __init__.py
python/promptius_gui_schema/: __init__.py
schema/: README.md  dgui-schema.json  promptius-gui-schema.json
scripts/: bump-version.sh  custom-zod-generator.mjs  fix-python-oneof.py  generate-all.sh  generate-python-ast.py  generate-python.sh  generate-typescript.sh  generate-zod.mjs  generate-zod.sh
