[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-openai>=0.3.35",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "langchain-google-genai>=2.1.12",
]
